--- a/.github/workflows/DumprX.yml
+++ b/.github/workflows/DumprX.yml
@@ -50,8 +50,8 @@ jobs:
               mkdir -p ~/.ssh
               ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
               ssh-keyscan -t rsa gitlab.com >> ~/.ssh/known_hosts
-              git config --global user.name "atharvnegi"
-              git config --global user.email "atharvnegi2951@gmail.com"
+              git config --global user.name "anyinglulu1"
+              git config --global user.email "seanchendana@gmail.com"
 
        - name: Setup Config envs
          working-directory: DumprX
